--- a/src/ionic-datepicker-popover.html
+++ b/src/ionic-datepicker-popover.html
@@ -1,6 +1,6 @@
 <ion-popover-view class="ionic_datepicker_popover">
   <ion-header-bar class="header">
-    <h1 class="title">{{selctedDateEpoch | date : mainObj.dateFormat}}</h1>
+    <h1 class="title">{{calendarTitle}}</h1>
   </ion-header-bar>
   <ion-content class="ionic_datepicker_popover_content">
     <div class="">
